--- a/TODO.txt
+++ b/TODO.txt
@@ -1,30 +1,49 @@
-Short term
+﻿Short term
 
 	- General
+		
+		✔ Button 
 
-	- Button
+		✕ Canvas 
+		
+		✕ Chart 
+		
+		✔ Checkbox
+		
+		✕ Container
+		
+		✔ Dropdown
+		
+		✔ Element
+
+		✕ Image
+		
+		✔ Label
+		
+		✔ RadioButton
+		
+		✕ Slider
+		
+		✔ TextInput
+		
+		✔ Window
 	
-	- Canvas
-
-	- Chart
-
-	- Checkbox
-
-	- Container
-
-	- Dropdown
-
-	- Image
-
-	- Label
-
-	- RadioButton
-
-	- Slider
-
-	- TextInput
-
-	- Window
+Medium term
+	- Testing, JSON schema, 
 
 Long term
 	- Python bindings?
+
+Applications
+
+	- Simple
+		- Text editor
+	
+	- Medium
+		- Bitmap image editing program
+
+		- Spread sheet
+
+	- Difficult
+		- UI Designer
+
