--- a/TODO
+++ b/TODO
@@ -2,3 +2,5 @@ Windows, Splitting, Multiplexing
 Index operations so you can use spacebar as operation search ( save, new file, open, etc. )
 Hotkeys that make sense, ( Ctrl as operation, Alt as context operation, something something )
 Find a way to save window setups between instances. (Use AppData?)
+Differentiate window names from window titles
+Window operations (on focus, on click, on hover, on release, utc.)
