--- a/TODO
+++ b/TODO
@@ -3,4 +3,6 @@ Index operations so you can use spacebar as operation search ( save, new file, o
 Hotkeys that make sense, ( Ctrl as operation, Alt as context operation, something something )
 Find a way to save window setups between instances. (Use AppData?)
 Differentiate window names from window titles
-Window operations (on focus, on click, on hover, on release, utc.)
+Window callbacks (on focus, on click, on hover, on release, utc.)
+Window top bar ( File, Edit, View, utc )
+Implement modal operations using a new field in UIInstance_s
